LFS158/Deploy-App/App2/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: nginx-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
